4817.	[cleanup]	Use DNS_NAME_INITABSOLUTE and DNS_NAME_INITNONABSOLUTE.
			[RT #45433]

4816.	[bug]		Don't use a common array for storing EDNS options
			in DiG as it could fill up. [RT #45611]

4815.	[bug]		rbt_test.c:insert_and_delete needed to call
			dns_rbt_addnode instead of dns_rbt_addname. [RT #46553]

4814.	[cleanup]	Use AS_HELP_STRING for consistent help text. [RT #46521]

4813.	[bug]		Address potential read after free errors from
			query_synthnodata, query_synthwildcard and
			query_synthnxdomain. [RT #46547]

4812.	[bug]		Minor improvements to stability and consistency of code
			handling managed keys. [RT #46468]

4811.	[bug]		Revert api changes to use <isc/buffer.h> inline
			macros.  Provide a alternative mechanism to turn
			on the use of inline macros when building BIND.
			[RT #46520]

4810.	[test]		The chain system test failed if the IPv6 interfaces
			were not configured. [RT #46508]

	--- 9.12.0b2 released ---

4809.	[port]		Check at configure time whether -latomic is needed
			for stdatomic.h. [RT #46324]

4808.	[bug]		Properly test for zlib.h. [RT #46504]

4807.	[cleanup]	isc_rng_randombytes() returns a specified number of
			bytes from the PRNG; this is now used instead of
			calling isc_rng_random() multiple times. [RT #46230]

4806.	[func]		Log messages related to loading of zones are now
			directed to the "zoneload" logging category.
			[RT #41640]

4805.	[bug]		TCP4Active and TCP6Active weren't being updated
			correctly. [RT #46454]

4804.	[port]		win32: access() does not work on directories as
			required by POSIX.  Supply a alternative in
			isc_file_isdirwritable. [RT #46394]

4803.	[placeholder]

4802.	[test]		Refactor mkeys system test to make it quicker and more
			reliable. [RT #45293]

4801.	[func]		'dnssec-lookaside auto;' and 'dnssec-lookaside .
			trust-anchor dlv.isc.org;' now elicit warnings rather
			than being fatal configuration errors. [RT #46410]

4800.	[bug]		When processing delzone, write one zone config per